--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                         <div class="col-md-6 col-sm-10">
                               <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                                     <h2>About Me</h2>
-                                    <p>Hello, I'm Nicolas, a software engineer based in Nicosia, Cyprus.</p>
+                                    <p>Hello, I'm Nicolas, a software engineer based in Nicosia, Cyprus. When not working, I
+                                          enjoy going out in the nature, either on foot or on my mountain bike.</p>
                               </div>
                         </div>
 
@@ -118,13 +119,13 @@
                         <div class="col-md-5 col-sm-10">
                               <div class="about-skill wow fadeInUp" data-wow-delay="1.9s">
 
-                                    <strong>Softare Development</strong>
+                                    <strong>Software Development</strong>
                                     <span class="pull-right">95%</span>
                                     <div class="progress">
                                           <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                                                style="width: 70%;"></div>
+                                                style="width: 95%;"></div>
                                     </div>
-                                    
+
                                     <strong>Database Design</strong>
                                     <span class="pull-right">90%</span>
                                     <div class="progress">
@@ -134,10 +135,10 @@
 
 
                                     <strong>Project Management</strong>
-                                    <span class="pull-right">75%</span>
+                                    <span class="pull-right">80%</span>
                                     <div class="progress">
                                           <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"
-                                                style="width: 60%;"></div>
+                                                style="width: 80%;"></div>
                                     </div>
                               </div>
                         </div>
@@ -180,7 +181,6 @@
                         <div class="col-md-6 col-sm-8">
                               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                                     <h2>My Resume</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                               </div>
                         </div>
 
@@ -215,7 +215,8 @@
                         <div class="col-md-8 col-sm-8">
                               <div class="wow fadeInUp resume-info" data-wow-delay="0.8s">
                                     <h4>Software Developer</h4>
-                                    <p>Involved in all phases of software development cycle, in a variety of windows and web applications.</p>
+                                    <p>Involved in all phases of software development cycle, in a variety of windows and web
+                                          applications.</p>
                               </div>
                         </div>
 
@@ -250,7 +251,7 @@
                               <!-- SECTION TITLE -->
                               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                                     <h2>Recent Projects</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <p>These are some of the projects that I have worked as a freelancer.</p>
                               </div>
                         </div>
 
@@ -313,32 +314,11 @@
                               <!-- SECTION TITLE -->
                               <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                                     <h2>get in touch</h2>
-                                    <p>let's work together projects and just send me email here</p>
+                                    <p>if you would like to contact me, send me an email at nicolasiac@hotmail.com</p>
                               </div>
                         </div>
 
-                        <div class="col-md-offset-1 col-md-10 col-sm-12">
-                              <!-- CONTACT FORM HERE -->
-                              <div class="wow fadeInUp contact-form" data-wow-delay="1s">
-                                    <form id="contact-form">
-                                          <div class="col-md-4 col-sm-4">
-                                                <input type="text" class="form-control" name="name" placeholder="Name">
-                                          </div>
-                                          <div class="col-md-4 col-sm-4">
-                                                <input type="email" class="form-control" name="email" placeholder="Email">
-                                          </div>
-                                          <div class="col-md-4 col-sm-4">
-                                                <input type="phone" class="form-control" name="phone" placeholder="Phone">
-                                          </div>
-                                          <div class="col-md-12 col-sm-12">
-                                                <textarea class="form-control" rows="5" name="message" placeholder="Message"></textarea>
-                                          </div>
-                                          <div class="col-md-offset-9 col-md-3 col-sm-offset-8 col-sm-4">
-                                                <button id="submit" type="submit" class="form-control" name="submit">Send Message</button>
-                                          </div>
-                                    </form>
-                              </div>
-                        </div>
+                        
 
                   </div>
             </div>
