--- a/index.html
+++ b/index.html
@@ -352,7 +352,23 @@
       <script src="js/wow.min.js"></script>
       <script src="js/custom.js"></script>
 
-
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=6112359; 
+var sc_invisible=1; 
+var sc_security="57709721"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="web analytics"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/6112359/0/57709721/1/" alt="web
+analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 </body>
 
 </html>
