--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
 
       <meta charset="UTF-8">
-
+      <meta name="google-site-verification" content="Ib44U9tfxyT1PxW_hfUGWNOkY4nDjdvqjiZRE9vaoyw" />
       <title>Nicolas Iacovides - Software Engineer</title>
 
       <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-      <meta name="description" content="Nicolas Iacovides's personal webpage.">s
-      <meta name="author" content="nicolas iaccovides">
+      <meta name="description" content="Nicolas Iacovides personal webpage.">
+      <meta name="author" content="nicolas iacovides">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
       <!-- Bootstrap css -->
