--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                               <div class="home-thumb">
                                     <h3 class="wow fadeInUp" data-wow-delay="0.4s">hello, This is Nicolas.</h3>
                                     <h1 class="wow fadeInUp" data-wow-delay="0.8s">Software Engineer, mountain-biker.</h1>
-                                    <a href="#" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">Download Resume</a>
+                                    <a href="#resume" class="wow fadeInUp btn btn-default section-btn" data-wow-delay="1s">View my Resume</a>
                                     <a href="#contact" class="wow fadeInUp btn btn-primay section-btn smoothScroll" data-wow-delay="1.2s">Work with me!</a>
                               </div>
                         </div>
@@ -104,7 +104,7 @@
                         <div class="clearfix"></div>
 
                         <div class="col-md-3 col-sm-5">
-                              <img src="images/about-img.jpg" class="wow fadeInUp img-responsive" data-wow-delay="1s" alt="About">
+                              <img src="images/about.jpg" class="wow fadeInUp img-responsive" data-wow-delay="1s" alt="About">
                         </div>
 
                         <div class="col-md-4 col-sm-7 about-profile">
@@ -112,7 +112,7 @@
                                     <li><span>Full Name :</span> Nicolas Iacovides</li>
                                     <li><span>Date of Birth :</span> 18 February 1981</li>
                                     <li><span>Email :</span> nicolasiac@hotmail.com</li>
-                                    <li><span>Address :</span> Nicosia, Cyprus</li>
+                                    <li><span>Location :</span> Nicosia, Cyprus</li>
                               </ul>
                         </div>
 
@@ -258,47 +258,21 @@
                         <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.4s">
                               <!-- WORK THUMB -->
                               <div class="work-thumb">
-                                    <a href="images/work-1.jpg" class="image-popup">
-                                          <img src="images/work-1.jpg" class="img-responsive" alt="Work">
+                                    <a href="images/mesitis.jpg" class="image-popup" title="Mesitis.com.cy">
+                                          <img src="images/mesitis.jpg" class="img-responsive" alt="Work">
                                     </a>
                               </div>
                         </div>
 
-                        <div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
+                        <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.6s">
                               <!-- WORK THUMB -->
                               <div class="work-thumb">
-                                    <a href="images/work-2.jpg" class="image-popup">
-                                          <img src="images/work-2.jpg" class="img-responsive" alt="Work">
+                                    <a href="images/practido.jpg" class="image-popup" title="PractiDo.com">
+                                          <img src="images/practido.jpg" class="img-responsive" alt="Work">
                                     </a>
                               </div>
                         </div>
 
-                        <div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.8s">
-                              <!-- WORK THUMB -->
-                              <div class="work-thumb">
-                                    <a href="images/work-3.jpg" class="image-popup">
-                                          <img src="images/work-3.jpg" class="img-responsive" alt="Work">
-                                    </a>
-                              </div>
-                        </div>
-
-                        <div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.8s">
-                              <!-- WORK THUMB -->
-                              <div class="work-thumb">
-                                    <a href="images/work-4.jpg" class="image-popup">
-                                          <img src="images/work-4.jpg" class="img-responsive" alt="Work">
-                                    </a>
-                              </div>
-                        </div>
-
-                        <div class="wow fadeInUp col-md-3 col-sm-3" data-wow-delay="1.0s">
-                              <!-- WORK THUMB -->
-                              <div class="work-thumb">
-                                    <a href="images/work-5.jpg" class="image-popup">
-                                          <img src="images/work-5.jpg" class="img-responsive" alt="Work">
-                                    </a>
-                              </div>
-                        </div>
 
                   </div>
             </div>
