--- a/index.html
+++ b/index.html
@@ -120,25 +120,25 @@
                               <div class="about-skill wow fadeInUp" data-wow-delay="1.9s">
 
                                     <strong>Software Development</strong>
-                                    <span class="pull-right">95%</span>
+                                    <span class="pull-right">100%</span>
                                     <div class="progress">
-                                          <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                                                style="width: 95%;"></div>
+                                          <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 100%;"></div>
                                     </div>
 
                                     <strong>Database Design</strong>
-                                    <span class="pull-right">90%</span>
+                                    <span class="pull-right">100%</span>
                                     <div class="progress">
-                                          <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
-                                                style="width: 90%;"></div>
+                                          <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 100%;"></div>
                                     </div>
 
 
                                     <strong>Project Management</strong>
-                                    <span class="pull-right">80%</span>
+                                    <span class="pull-right">100%</span>
                                     <div class="progress">
-                                          <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"
-                                                style="width: 80%;"></div>
+                                          <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                                                style="width: 100%;"></div>
                                     </div>
                               </div>
                         </div>
@@ -195,7 +195,7 @@
 
                         <div class="col-md-8 col-sm-8">
                               <div class="wow fadeInUp resume-info" data-wow-delay="0.8s">
-                                    <h4>Software Engineer</h4>
+                                    <h4>Software Engineer - Supervisor</h4>
                                     <p>Utilizing technologies such as ASP.NET C#, jQuery, Dojo, Oracle, SQL and Filenet to build
                                           large scale intranet applications used by the government and banks.</p>
                               </div>
