--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                               <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                                     <h2>About Me</h2>
                                     <p>Hello, I'm Nicolas, a software engineer based in Nicosia, Cyprus. When not working, I
-                                          enjoy going out in the nature, either on foot or on my mountain bike.</p>
+                                          enjoy going out in the nature, either on foot or on my mountain bike.</p>
                               </div>
                         </div>
 
